--- a/part_1_mars_news.ipynb
+++ b/part_1_mars_news.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Import Splinter and BeautifulSoup\n",
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -49,7 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visit the Mars NASA news site: https://redplanetscience.com\n"
+    "# Visit the Mars NASA news site: https://redplanetscience.com\n",
+    "url = 'https://redplanetscience.com'\n",
+    "browser.visit(url)\n",
+    "html = browser.html"
    ]
   },
   {
@@ -63,20 +68,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a Beautiful Soup object\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract all the text elements\n"
+    "# Create a Beautiful Soup object\n",
+    "soup = soup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract all the text elements\n",
+    "mars_text =soup.find_all('div', class_ =\"list_text\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<div class=\"list_text\">\n",
+       " <div class=\"list_date\">December 5, 2022</div>\n",
+       " <div class=\"content_title\">Virginia Middle School Student Earns Honor of Naming NASA's Next Mars Rover</div>\n",
+       " <div class=\"article_teaser_body\">NASA chose a seventh-grader from Virginia as winner of the agency's \"Name the Rover\" essay contest. Alexander Mather's entry for \"Perseverance\" was voted tops among 28,000 entries. </div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">December 4, 2022</div>\n",
+       " <div class=\"content_title\">Scientists Explore Outback as Testbed for Mars </div>\n",
+       " <div class=\"article_teaser_body\">Australia provides a great place for NASA's Mars 2020 and the ESA-Roscosmos ExoMars scientists to hone techniques in preparation for searching for signs ancient life on Mars.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">December 4, 2022</div>\n",
+       " <div class=\"content_title\">6 Things to Know About NASA's Ingenuity Mars Helicopter</div>\n",
+       " <div class=\"article_teaser_body\">The first helicopter attempting to fly on another planet is a marvel of engineering. Get up to speed with these key facts about its plans.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 26, 2022</div>\n",
+       " <div class=\"content_title\">NASA's Perseverance Rover Will Look at Mars Through These 'Eyes'</div>\n",
+       " <div class=\"article_teaser_body\">A pair of zoomable cameras will help scientists and rover drivers with high-resolution color images.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 25, 2022</div>\n",
+       " <div class=\"content_title\">NASA Adds Return Sample Scientists to Mars 2020 Leadership Team</div>\n",
+       " <div class=\"article_teaser_body\">The leadership council for Mars 2020 science added two new members who represent the interests of scientists destined to handle and study the first samples from Red Planet.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 19, 2022</div>\n",
+       " <div class=\"content_title\">Robotic Toolkit Added to NASA's Mars 2020 Rover</div>\n",
+       " <div class=\"article_teaser_body\">The bit carousel, which lies at the heart of the rover's Sample Caching System, is now aboard NASA's newest rover. </div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 18, 2022</div>\n",
+       " <div class=\"content_title\">7 Things to Know About the Mars 2020 Perseverance Rover Mission</div>\n",
+       " <div class=\"article_teaser_body\">NASA's next rover to the Red Planet is slated to launch no earlier than July 30. These highlights will get you up to speed on the ambitious mission.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 17, 2022</div>\n",
+       " <div class=\"content_title\">The Extraordinary Sample-Gathering System of NASA's Perseverance Mars Rover</div>\n",
+       " <div class=\"article_teaser_body\">Two astronauts collected Moon rocks on Apollo 11. It will take three robotic systems working together to gather up the first Mars rock samples for return to Earth.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 16, 2022</div>\n",
+       " <div class=\"content_title\">NASA's Mars 2020 Rover Closer to Getting Its Name</div>\n",
+       " <div class=\"article_teaser_body\">155 students from across the U.S. have been chosen as semifinalists in NASA's essay contest to name the Mars 2020 rover, and see it launch from Cape Canaveral this July.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 16, 2022</div>\n",
+       " <div class=\"content_title\">NASA's Curiosity Rover Finds an Ancient Oasis on Mars</div>\n",
+       " <div class=\"article_teaser_body\">New evidence suggests salty, shallow ponds once dotted a Martian crater — a sign of the planet's drying climate.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 14, 2022</div>\n",
+       " <div class=\"content_title\">Sensors on Mars 2020 Spacecraft Answer Long-Distance Call From Earth</div>\n",
+       " <div class=\"article_teaser_body\">Instruments tailored to collect data during the descent of NASA's next rover through the Red Planet's atmosphere have been checked in flight.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 14, 2022</div>\n",
+       " <div class=\"content_title\">Newfound Martian Aurora Actually the Most Common; Sheds Light on Mars' Changing Climate</div>\n",
+       " <div class=\"article_teaser_body\">A type of Martian aurora first identified by NASA’s MAVEN spacecraft in 2016 is actually the most common form of aurora occurring on the Red Planet, according to new results from the mission.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 12, 2022</div>\n",
+       " <div class=\"content_title\">Curiosity Mars Rover's Summer Road Trip Has Begun</div>\n",
+       " <div class=\"article_teaser_body\">After more than a year in the \"clay-bearing unit,\" Curiosity is making a mile-long journey around some deep sand so that it can explore higher up Mount Sharp.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 10, 2022</div>\n",
+       " <div class=\"content_title\">NASA to Reveal Name of Its Next Mars Rover</div>\n",
+       " <div class=\"article_teaser_body\">After a months-long contest among students to name NASA's newest Mars rover, the agency will reveal the winning name — and the winning student — this Thursday. </div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 7, 2022</div>\n",
+       " <div class=\"content_title\">NASA's MAVEN Explores Mars to Understand Radio Interference at Earth</div>\n",
+       " <div class=\"article_teaser_body\">NASA’s MAVEN spacecraft has discovered “layers” and “rifts” in the electrically charged part of the upper atmosphere of Mars.</div>\n",
+       " </div>]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_text\n"
    ]
   },
   {
@@ -101,77 +202,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an empty list to store the dictionaries\n"
+    "# Create an empty list to store the dictionaries\n",
+    "mars_list =[]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loop through the text elements\n",
-    "# Extract the title and preview text from the elements\n",
+    "for each in mars_text:\n",
+    "    mars_dict = {}\n",
+    "\n",
+    "#Extract the title and preview text from the elements\n",
+    "\n",
+    "    title = each.find('div', class_ = \"content_title\").text\n",
+    "    preview_text = each.find('div', class_ = \"article_teaser_body\").text\n",
     "# Store each title and preview pair in a dictionary\n",
-    "# Add the dictionary to the list\n"
+    "    mars_dict['title'] = title\n",
+    "    mars_dict['preview'] = preview_text\n",
+    "# Add the dictionary to the list\n",
+    "    mars_list.append(mars_dict)\n",
+    "        \n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 69,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'title': \"Common Questions about InSight's 'Mole'\",\n",
-       "  'preview': 'The following Q&As with members of the team answer some of the most common questions about the burrowing device, part of a science instrument called the Heat Flow and Physical Properties Package (HP3).'},\n",
-       " {'title': \"NASA's InSight Flexes Its Arm While Its 'Mole' Hits Pause\",\n",
-       "  'preview': \"Now that the lander's robotic arm has helped the mole get underground, it will resume science activities that have been on hold.\"},\n",
-       " {'title': \"NASA's Perseverance Rover Will Peer Beneath Mars' Surface \",\n",
-       "  'preview': \"The agency's newest rover will use the first ground-penetrating radar instrument on the Martian surface to help search for signs of past microbial life. \"},\n",
-       " {'title': \"NASA's Mars Rover Drivers Need Your Help\",\n",
-       "  'preview': 'Using an online tool to label Martian terrain types, you can train an artificial intelligence algorithm that could improve the way engineers guide the Curiosity rover.'},\n",
-       " {'title': 'NASA Invites Public to Share Excitement of Mars 2020 Perseverance Rover Launch',\n",
-       "  'preview': 'There are lots of ways to participate in the historic event, which is targeted for July 30.'},\n",
-       " {'title': \"NASA's Mars 2020 Rover Completes Its First Drive\",\n",
-       "  'preview': 'In a 10-plus-hour marathon, the rover steered, turned and drove in 3-foot (1-meter) increments over small ramps.'},\n",
-       " {'title': 'Two of a Space Kind: Apollo 12 and Mars 2020',\n",
-       "  'preview': 'Apollo 12 and the upcoming Mars 2020 mission may be separated by half a century, but they share several goals unique in the annals of space exploration.'},\n",
-       " {'title': \"3 Things We've Learned From NASA's Mars InSight \",\n",
-       "  'preview': 'Scientists are finding new mysteries since the geophysics mission landed two years ago.'},\n",
-       " {'title': 'Global Storms on Mars Launch Dust Towers Into the Sky',\n",
-       "  'preview': 'A Mars Dust Tower Stands Out Dust storms are common on Mars. But every decade or so, something unpredictable happens: a series of runaway storms break out, covering the entire planet in a dusty haze.'},\n",
-       " {'title': 'NASA Administrator Statement on Moon to Mars Initiative, FY 2021 Budget',\n",
-       "  'preview': \"Jim Bridenstine addresses NASA's ambitious plans for the coming years, including Mars Sample Return.\"},\n",
-       " {'title': \"NASA's Perseverance Rover Will Carry First Spacesuit Materials to Mars\",\n",
-       "  'preview': 'In a Q&A, spacesuit designer Amy Ross explains how five samples, including a piece of helmet visor, will be tested aboard the rover, which is targeting a July 30 launch. '},\n",
+       "[{'title': \"Virginia Middle School Student Earns Honor of Naming NASA's Next Mars Rover\",\n",
+       "  'preview': 'NASA chose a seventh-grader from Virginia as winner of the agency\\'s \"Name the Rover\" essay contest. Alexander Mather\\'s entry for \"Perseverance\" was voted tops among 28,000 entries. '},\n",
+       " {'title': 'Scientists Explore Outback as Testbed for Mars ',\n",
+       "  'preview': \"Australia provides a great place for NASA's Mars 2020 and the ESA-Roscosmos ExoMars scientists to hone techniques in preparation for searching for signs ancient life on Mars.\"},\n",
+       " {'title': \"6 Things to Know About NASA's Ingenuity Mars Helicopter\",\n",
+       "  'preview': 'The first helicopter attempting to fly on another planet is a marvel of engineering. Get up to speed with these key facts about its plans.'},\n",
+       " {'title': \"NASA's Perseverance Rover Will Look at Mars Through These 'Eyes'\",\n",
+       "  'preview': 'A pair of zoomable cameras will help scientists and rover drivers with high-resolution color images.'},\n",
+       " {'title': 'NASA Adds Return Sample Scientists to Mars 2020 Leadership Team',\n",
+       "  'preview': 'The leadership council for Mars 2020 science added two new members who represent the interests of scientists destined to handle and study the first samples from Red Planet.'},\n",
+       " {'title': \"Robotic Toolkit Added to NASA's Mars 2020 Rover\",\n",
+       "  'preview': \"The bit carousel, which lies at the heart of the rover's Sample Caching System, is now aboard NASA's newest rover. \"},\n",
+       " {'title': '7 Things to Know About the Mars 2020 Perseverance Rover Mission',\n",
+       "  'preview': \"NASA's next rover to the Red Planet is slated to launch no earlier than July 30. These highlights will get you up to speed on the ambitious mission.\"},\n",
+       " {'title': \"The Extraordinary Sample-Gathering System of NASA's Perseverance Mars Rover\",\n",
+       "  'preview': 'Two astronauts collected Moon rocks on Apollo 11. It will take three robotic systems working together to gather up the first Mars rock samples for return to Earth.'},\n",
        " {'title': \"NASA's Mars 2020 Rover Closer to Getting Its Name\",\n",
        "  'preview': \"155 students from across the U.S. have been chosen as semifinalists in NASA's essay contest to name the Mars 2020 rover, and see it launch from Cape Canaveral this July.\"},\n",
-       " {'title': \"NASA's Mars Helicopter Attached to Mars 2020 Rover \",\n",
-       "  'preview': 'The helicopter will be first aircraft to perform flight tests on another planet.'},\n",
-       " {'title': \"InSight's 'Mole' Team Peers into the Pit\",\n",
-       "  'preview': 'Efforts to save the heat probe continue.'},\n",
-       " {'title': \"Q&A with the Student Who Named Ingenuity, NASA's Mars Helicopter\",\n",
-       "  'preview': 'As a longtime fan of space exploration, Vaneeza Rupani appreciates the creativity and collaboration involved with trying to fly on another planet.'}]"
+       " {'title': \"NASA's Curiosity Rover Finds an Ancient Oasis on Mars\",\n",
+       "  'preview': \"New evidence suggests salty, shallow ponds once dotted a Martian crater — a sign of the planet's drying climate.\"},\n",
+       " {'title': 'Sensors on Mars 2020 Spacecraft Answer Long-Distance Call From Earth',\n",
+       "  'preview': \"Instruments tailored to collect data during the descent of NASA's next rover through the Red Planet's atmosphere have been checked in flight.\"},\n",
+       " {'title': \"Newfound Martian Aurora Actually the Most Common; Sheds Light on Mars' Changing Climate\",\n",
+       "  'preview': 'A type of Martian aurora first identified by NASA’s MAVEN spacecraft in 2016 is actually the most common form of aurora occurring on the Red Planet, according to new results from the mission.'},\n",
+       " {'title': \"Curiosity Mars Rover's Summer Road Trip Has Begun\",\n",
+       "  'preview': 'After more than a year in the \"clay-bearing unit,\" Curiosity is making a mile-long journey around some deep sand so that it can explore higher up Mount Sharp.'},\n",
+       " {'title': 'NASA to Reveal Name of Its Next Mars Rover',\n",
+       "  'preview': \"After a months-long contest among students to name NASA's newest Mars rover, the agency will reveal the winning name — and the winning student — this Thursday. \"},\n",
+       " {'title': \"NASA's MAVEN Explores Mars to Understand Radio Interference at Earth\",\n",
+       "  'preview': 'NASA’s MAVEN spacecraft has discovered “layers” and “rifts” in the electrically charged part of the upper atmosphere of Mars.'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Print the list to confirm success\n"
+    "# Print the list to confirm success\n",
+    "mars_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,9 +324,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -222,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
