completed answering questions

--- a/part_1_mars_news.ipynb
+++ b/part_1_mars_news.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
@@ -19,7 +19,8 @@
     "# Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import pymongo"
    ]
   },
   {
@@ -314,11 +315,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export data to MongoDB\n",
+    "conn = 'mongodb://localhost:27017'\n",
+    "client = pymongo.MongoClient(conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = client.mars_db\n",
+    "collection = db.news"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export data to MongoDB\n"
+    "for each in mars_text:\n",
+    "    title = each.find('div', class_ = \"content_title\").text\n",
+    "    preview_text = each.find('div', class_ = \"article_teaser_body\").text\n",
+    "    \n",
+    "    post{\n",
+    "        'title': title,\n",
+    "        'preview':preview_text\n",
+    "    }\n",
+    "    "
    ]
   }
  ],
